# extendme

./: README.md  pyproject.toml
.github/workflows/: qa.yaml
extendme/: __init__.py  _extension_decorator.py
extensified/: __init__.py  _extension_decorator.py
tests/: test_extension_classes.py
